--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
             <div class="video">
 
                 <div class="videoPlayer">
-                    <video width = '100%' controls>
+                    <video width = '100%' controls playsinline>
                         <source src="/videos/roxana_video_reduced_new.mp4" type="video/mp4">
                     </video>
                     <div class="playButton">
