--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
             <div class="video">
 
                 <div class="videoPlayer">
-                    <video playsinline muted loop autoplay controls="true" width='100%' height='100%' src='/videos/roxana_video_reduced_new_2.mp4' type='video/mp4'></video>
+                    <video playsinline loop autoplay controls="true" width='100%' height='100%' src='/videos/roxana_video_reduced_new_2.mp4' type='video/mp4'></video>
                 </div>
                 <div class="desktopScribble">
                     <img src="/Images/desktopHomeScribble.png" alt="scribble">
