--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
             <div class="video">
 
                 <div class="videoPlayer">
-                    <video playsinline loop autoplay controls="true" width='100%' height='100%' src='/videos/roxana_video_reduced_new_2.mp4' type='video/mp4'></video>
+                    <iframe playsinline muted loop autoplay controls="true" width="560" height="315" src="https://www.youtube.com/embed/tq4WFoeso_Y" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                 </div>
                 <div class="desktopScribble">
                     <img src="/Images/desktopHomeScribble.png" alt="scribble">
