--- a/index.html
+++ b/index.html
@@ -67,10 +67,7 @@
                 </div>
             </div>
             <div class="video">
-
-                <div class="videoPlayer">
-                    <iframe playsinline muted loop autoplay controls="true" width="560" height="315" src="https://www.youtube.com/embed/tq4WFoeso_Y" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-                </div>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/tq4WFoeso_Y" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                 <div class="desktopScribble">
                     <img src="/Images/desktopHomeScribble.png" alt="scribble">
                 </div>
