--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
             </div>
             <div class="hamburger">
                 <div class="hamgburgerItem"></div>
+                <div class="hamburgerTrigger"></div>
             </div>
         </nav>
         <div class="contents">
