--- a/about.html
+++ b/about.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Roxana Paun Trifan</title>
-    <link rel="stylesheet" href="/styles/index.css">
+    <link rel="stylesheet" href="/styles/about.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400;0,800;1,500&display=swap" rel="stylesheet">
@@ -30,51 +30,30 @@
             </div>
         </nav>
         <div class="contents">
-            <div class="heading">
-                <div class="actor">
-                    <h1>actor <span>&</span></h1>
+            <div class="firstBox">
+                <div class="heading">
+                    <h1 class = 'title01'>about</h1>
+                    <h1 class = 'title02'>about</h1>
                 </div>
-                <div class="name"> 
-                    <h1>roxana paun trifan</h1>
-                </div>
-                <div class="researcher">
-                    <h1>researcher</h1>
+                <div class="details">
+                    <p>Roxana Păun Trifan is a Melbourne based theatre practitioner born in Iași, Romania, 
+                        where she started her career at the National Theatre. Her journey started on the 
+                        stage of a little village in Romania, and she defines herself as a theatre peregrine. 
+                        She completed a practice based BA Hons in Acting at the National University of Arts 
+                        in Romania and a Masters in Acting at the National Theatre of Venice, working with 
+                        Eugenio Barba, John Strasberg, Rosella Falk, Alberto Terrani, Carlo Mazzacuratti, 
+                        Andrei Serban among others. She is completing her PhD in Theatre Performance at Monash
+                         University. A Theatre Works Associated Artist 2020 and 2021, her career combines 
+                         professional theatre and film practice. She is the recipient of numerous international 
+                         awards and prestigious grants for her theatre performances, both here in Australia and in 
+                         Europe. Her biggest dream is to work in a theatre every day, and to feel home in Melbourne, 
+                         professionally speaking.</p>
                 </div>
             </div>
-            <div class="profile">
-                <img src="/Images/mobileProfile.png" alt="profile">
-            </div>
+            <div class="secondBox">
+                <img src="/Images/roxanaAboutMobile.png" alt="image">
         </div>
     </main>
-
-    <section>
-        <div class="paragraph">
-            <div class="sectionTitle">
-                <h1>Roxana is a PHD researcher in theatre</h1>
-            </div>
-        </div>
-        <div class="sectionContent">
-            <div class="firstBox">
-                <div class="sectionInformation">
-                    <p> Born in Romania is now a Melbourne based theatre film practitioner and 
-                        Associate Artist for Theatre Works. She has had an extensive career across 
-                        European theatre, film and has worked as an Artistic Director in Italy. 
-                        Since moving to Melbourne she has been involved with La Mama, MUST Theatre 
-                        and Theatre Works.
-                    </p>
-                </div>
-                <div class="biographyButtonDiv">
-                    <button class="biographyButton">Read full biography here</button>
-                </div>
-            </div>
-            <div class="video">
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/tq4WFoeso_Y" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-                <div class="desktopScribble">
-                    <img src="/Images/desktopHomeScribble.png" alt="scribble">
-                </div>
-            </div>
-        </div>
-    </section>
 
     <footer>
         <div class="footerDetails">
