fixed home to about links

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                     </p>
                 </div>
                 <div class="biographyButtonDiv">
-                    <button class="biographyButton">Read full biography here</button>
+                   <a href="about.html"><button class="biographyButton">Read full biography here</button></a>
                 </div>
             </div>
             <div class="video">
