projects device wip

--- a/projects.html
+++ b/projects.html
@@ -50,8 +50,13 @@
                         and will be playing from the 10th of January 
                         2022 until the 13th.</p>
                 </div>
-                <div class="buttonContainer">
-                    <a href="https://www.theatreworks.org.au/program/masha-in-translation"><button class="buttonOne">tickets available here</button></a>
+                <div class="buttonWrapper">
+                    <div class="buttonContainer">
+                        <a href="https://www.theatreworks.org.au/program/masha-in-translation"><button class="buttonOne">tickets available here</button></a>
+                    </div>
+                    <div class="scribble">
+                        <img src="/Images/ticketsScribble.png" alt="ticketsScribble">
+                    </div>
                 </div>
             </div>
             <div class="secondBox">
