contact page wip

--- a/thankyou.html
+++ b/thankyou.html
@@ -32,33 +32,9 @@
         <div class="contents">
             <div class="firstBox">
                 <div class="heading">
-                    <h1 class = 'title01'>contact</h1>
-                    <h1 class = 'title02'>contact</h1>
+                    <h1 class = 'title01'>thank you!</h1>
+                    <h1 class = 'title02'>thank you!</h1>
                 </div>
-                <div class="details">
-                    
-                    <form action="https://formsubmit.co/rpauntrifan@gmail.com" method="POST">
-                        <input type="hidden" name="_captcha" value="false">
-                        <input type="hidden" name="_next" value="https://vigorous-panini-748ed2.netlify.app/thankyou.html">
-                        <input type="text" name="name" placeholder="Please enter your name" required>
-                        <input type="email" name="email" placeholder="Please enter your email address" required>
-                        <input type="text" name="name" placeholder="Please enter your message" required>
-                        <button type="submit">Send</button>
-                   </form>
-
-
-                <div class="buttonWrapper">
-                    <div class="buttonContainer">
-                        <a href="https://www.theatreworks.org.au/program/masha-in-translation"><button class="buttonOne">tickets available here</button></a>
-                    </div>
-                    <div class="scribble">
-                        <img src="/Images/ticketsScribble.png" alt="ticketsScribble">
-                    </div>
-                </div>
-            </div>
-            <div class="secondBox">
-                <img src="/Images/projectOneImage.png" alt="image">
-            </div>
         </div>
     </main>
 
