--- a/contact.html
+++ b/contact.html
@@ -22,7 +22,7 @@
                     <li><a class="aboutContainer" href="about.html">About</a></li>
                     <li><a class="projectsContainer" href="projects.html">Projects</a>
                 </ul>
-                <a href="index.html"><button class ='contact'>Contact</button></a>
+                <a href="contact.html"><button class ='contact'>Contact</button></a>
             </div>
             <div class="hamburger">
                 <div class="hamgburgerItem"></div>
@@ -50,7 +50,7 @@
                         </div>
                         <div class="contactTextContainer">
                             <h1 class="contactTextTitle">Your message</h1>
-                            <input class = "contactTextInput" type="text" name="name" placeholder="Please enter your message" required>
+                            <textarea class = "contactTextInput" type="text" name="name" placeholder="Please enter your message" required></textarea>
                         </div>
                         
                         <div class="contactButtonContainer">
