--- a/thankyou.html
+++ b/thankyou.html
@@ -22,7 +22,7 @@
                     <li><a class="aboutContainer" href="about.html">About</a></li>
                     <li><a class="projectsContainer" href="projects.html">Projects</a>
                 </ul>
-                <a href="index.html"><button class ='contact'>Contact</button></a>
+                <a href="contact.html"><button class ='contact'>Contact</button></a>
             </div>
             <div class="hamburger">
                 <div class="hamgburgerItem"></div>
