--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                 </div>
             </div>
             <div class="video">
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/tq4WFoeso_Y" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/nuUq4lHxhvs" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                 <div class="desktopScribble">
                     <img src="/Images/desktopHomeScribble.png" alt="scribble">
                 </div>
