--- a/about.html
+++ b/about.html
@@ -65,9 +65,9 @@
             <div class="socials">
                 <h1>socials</h1>
                 <div class="icons">
-                    <div class="facebookIcon"><a href="index.html"><img src="/Images/mobileFooterFacebook.svg" alt="facebook"></a></div>
-                    <div class="instagramIcon"><a href="index.html"><img src="/Images/mobileFooterInstagram.svg" alt="instagram"></a></div>
-                    <div class="youtubeIcon"><a href="index.html"><img src="/Images/mobileFooterYoutube.svg" alt="youtube"></a></div>
+                    <div class="facebookIcon"><a href="https://www.instagram.com/roxanapauntrifan"><img src="/Images/mobileFooterFacebook.svg" alt="facebook"></a></div>
+                    <div class="instagramIcon"><a href="https://www.facebook.com/Roxana-Paun-Trifan-108351551611725"><img src="/Images/mobileFooterInstagram.svg" alt="instagram"></a></div>
+                    <div class="youtubeIcon"><a href="https://www.youtube.com/channel/UCwDnvcSmHkmJDFdXVdeIXFA"><img src="/Images/mobileFooterYoutube.svg" alt="youtube"></a></div>
                 </div>
             </div>
             <div class="designAndDevelopment">
