--- a/thankyou.html
+++ b/thankyou.html
@@ -48,8 +48,8 @@
             <div class="socials">
                 <h1>socials</h1>
                 <div class="icons">
-                    <div class="facebookIcon"><a href="https://www.instagram.com/roxanapauntrifan"><img src="/Images/mobileFooterFacebook.svg" alt="facebook"></a></div>
-                    <div class="instagramIcon"><a href="https://www.facebook.com/Roxana-Paun-Trifan-108351551611725"><img src="/Images/mobileFooterInstagram.svg" alt="instagram"></a></div>
+                    <div class="facebookIcon"><a href="https://www.facebook.com/rpauntrifan/"><img src="/Images/mobileFooterFacebook.svg" alt="facebook"></a></div>
+                    <div class="instagramIcon"><a href="https://www.instagram.com/roxanapauntrifan" alt="instagram"></a></div>
                     <div class="youtubeIcon"><a href="https://www.youtube.com/channel/UCwDnvcSmHkmJDFdXVdeIXFA"><img src="/Images/mobileFooterYoutube.svg" alt="youtube"></a></div>
                 </div>
             </div>
