--- a/contact.html
+++ b/contact.html
@@ -77,7 +77,7 @@
                 <h1>socials</h1>
                 <div class="icons">
                     <div class="facebookIcon"><a href="https://www.facebook.com/rpauntrifan/"><img src="/Images/mobileFooterFacebook.svg" alt="facebook"></a></div>
-                    <div class="instagramIcon"><a href="https://www.instagram.com/roxanapauntrifan" alt="instagram"></a></div>
+                    <div class="instagramIcon"><a href="https://www.instagram.com/rpauntrifan/"><img src="/Images/mobileFooterInstagram.svg" alt="instagram"></a></div>
                     <div class="youtubeIcon"><a href="https://www.youtube.com/channel/UCwDnvcSmHkmJDFdXVdeIXFA"><img src="/Images/mobileFooterYoutube.svg" alt="youtube"></a></div>
                 </div>
             </div>
